# pulseaudio

./: .gitignore  .gitlab-ci.yml  .mailmap  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile.am  NEWS  PROTOCOL  README  acinclude.m4  autogen.sh  bootstrap.sh  configure.ac  git-version-gen  libpulse-browse.pc.in  libpulse-glib-mainloop.pc.in  libpulse-glib12-mainloop.pc.in  libpulse-mainloop-glib.pc.in  libpulse-mainloop-glib12.pc.in  libpulse-simple.pc.in  libpulse.pc.in  meson.build  meson_options.txt  orc.mak  polyplib-browse.pc.in  polyplib-error.pc.in  polyplib-glib-mainloop.pc.in  polyplib-glib12-mainloop.pc.in  polyplib-mainloop.pc.in  polyplib-simple.pc.in  polyplib.pc.in  pulseaudio.vapi  shave  shave-libtool  todo
doc/: FAQ.html.in  Makefile.am  README.html.in  cli.html.in  daemon.html.in  messaging_api.txt  modules.html.in  stream_restore_fallback_table_example.table  style.css  todo
doxygen/: .gitignore  Makefile.am  doxygen.conf.in  meson.build
man/: .gitignore  Makefile.am  default.pa.5.xml.in  esdcompat.1.xml.in  meson.build  pabrowse.1.xml.in  pacat.1.xml.in  pacmd.1.xml.in  pactl.1.xml.in  padsp.1.xml.in  paplay.1.xml.in  pasuspender.1.xml.in  pax11publish.1.xml.in  pulse-cli-syntax.5.xml.in  pulse-client.conf.5.xml.in  pulse-daemon.conf.5.xml.in  pulseaudio.1.xml.in  start-pulseaudio-kde.1.xml.in  start-pulseaudio-x11.1.xml.in  xmltoman  xmltoman.css  xmltoman.dtd  xmltoman.xsl
polyp/: Makefile.am  alsa-util.c  alsa-util.h  authkey-prop.c  authkey-prop.h  authkey.c  authkey.h  autoload.c  autoload.h  caps.c  caps.h  cdecl.h  channelmap.c  channelmap.h  cli-command.c  cli-command.h  cli-text.c  cli-text.h  cli.c  cli.h  client-conf-x11.c  client-conf-x11.h  client-conf.c  client-conf.h  client.c  client.conf  client.conf.in  client.h  clitext.c  clitext.h  cmdline.c  cmdline.h  conf-parser.c  conf-parser.h  conf.c  conf.h  config  config-client.c  config-client.h  confparser.c  (+219 more)
shell-completion/bash/: meson.build  pactl  pulseaudio
src/: .gitignore  Makefile  Makefile.am  alsa-util.c  alsa-util.h  authkey.c  authkey.h  cli-command.c  cli-command.h  cli.c  cli.h  client.c  client.h  clitext.c  clitext.h  cmdline.c  cmdline.h  core.c  core.h  depmod.py  dynarray.c  dynarray.h  endianmacros.h  esound-spec.h  esound.h  hashmap.c  hashmap.h  hashset.c  hashset.h  idxset.c  idxset.h  inputstream.c  inputstream.h  iochannel.c  iochannel.h  ioline.c  ioline.h  log  main.c  main.h  (+121 more)
src/daemon/: .gitignore  Makefile  PulseAudio.policy  caps.c  caps.h  cmdline.c  cmdline.h  cpulimit.c  cpulimit.h  daemon-conf.c  daemon-conf.h  daemon.conf.in  default.pa.in  default.pa.win32  dumpmodules.c  dumpmodules.h  esdcompat.in  esdcompat.sh.in  ltdl-bind-now.c  ltdl-bind-now.h  main.c  meson.build  org.pulseaudio.policy  org.pulseaudio.policy.in  polkit.c  polkit.h  pulseaudio-kde.desktop.in  pulseaudio-module-xsmp.desktop  pulseaudio-system.conf  pulseaudio.desktop  pulseaudio.desktop.in  server-lookup.c  server-lookup.h  start-pulseaudio-kde.in  start-pulseaudio-x11.in  system.pa.in
src/modules/: .gitignore  Makefile  Makefile.am  alsa-util.c  alsa-util.h  bt-ipc.c  bt-proximity-helper.c  bt-sbc.c  dbus-util.c  dbus-util.h  hal-util.c  hal-util.h  howl-wrap.c  howl-wrap.h  meson.build  module-allow-passthrough.c  module-alsa-sink.c  module-alsa-source.c  module-always-sink.c  module-always-source.c  module-augment-properties.c  module-bonjour-publish.c  module-bt-device.c  module-bt-discover.c  module-bt-proximity.c  module-card-restore.c  module-cli.c  module-combine-sink.c  module-combine.c  module-console-kit.c  module-cork-music-on-phone.c  module-dbus-protocol.c  module-default-device-restore.c  module-defs.h.m4  module-detect.c  module-devd-detect.c  module-device-manager.c  module-device-restore.c  module-echo-cancel.c  module-equalizer-sink.c  (+72 more)
src/polyp/: browser.c  browser.h  channelmap.c  channelmap.h  client-conf-x11.c  client-conf-x11.h  client-conf.c  client-conf.h  context.c  context.h  def.h  error.c  error.h  glib-mainloop.c  glib-mainloop.h  glib12-mainloop.c  internal.h  introspect.c  introspect.h  mainloop-api.c  mainloop-api.h  mainloop-signal.c  mainloop-signal.h  mainloop.c  mainloop.h  operation.c  operation.h  polypaudio.h  polyplib-browser.c  polyplib-context.c  polyplib-error.c  polyplib-error.h  polyplib-internal.h  polyplib-introspect.c  polyplib-operation.c  polyplib-operation.h  polyplib-scache.c  polyplib-simple.c  polyplib-simple.h  polyplib-stream.c  (+26 more)
src/polypcore/: alsa-util.c  authkey-prop.c  authkey-prop.h  authkey.c  autoload.c  autoload.h  cli-command.c  cli-command.h  cli-text.c  cli-text.h  cli.c  cli.h  client.c  client.h  conf-parser.c  conf-parser.h  core-def.h  core-error.c  core-error.h  core-scache.c  core-scache.h  core-subscribe.c  core-subscribe.h  core-util.c  core-util.h  core.c  core.h  dllmain.c  dynarray.c  dynarray.h  endianmacros.h  esound.h  hashmap.c  hashmap.h  howl-wrap.c  idxset.c  inet_ntop.c  inet_pton.c  inet_pton.h  iochannel.c  (+102 more)
src/pulse/: Makefile  browser.c  browser.h  cdecl.h  channelmap.c  channelmap.h  client-conf-x11.c  client-conf-x11.h  client-conf.c  client-conf.h  client.conf.in  context.c  context.h  def.h  direction.c  direction.h  error.c  error.h  ext-device-manager.c  ext-device-manager.h  ext-device-restore.c  ext-device-restore.h  ext-stream-restore.c  ext-stream-restore.h  fork-detect.c  format.c  format.h  gccmacro.h  glib-mainloop.c  glib-mainloop.h  glib12-mainloop.c  i18n.c  i18n.h  internal.h  introspect.c  introspect.h  json.c  json.h  libpulse.def  lock-autospawn.c  (+40 more)
src/pulsecore/: Makefile  Makefile.am  anotify.c  anotify.h  arpa-inet.c  arpa-inet.h  asyncmsgq.c  asyncmsgq.h  asyncq.c  asyncq.h  atomic.h  aupdate.c  aupdate.h  auth-cookie.c  auth-cookie.h  authkey-prop.c  authkey-prop.h  authkey.c  authkey.h  autoload.c  autoload.h  avahi-wrap.c  avahi-wrap.h  bitset.c  bitset.h  card.c  card.h  cli-command.c  cli-command.h  cli-text.c  cli-text.h  cli.c  cli.h  client.c  client.h  conf-parser.c  conf-parser.h  core-def.h  core-error.c  core-error.h  (+266 more)
(+451 files in other folders)
